--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,3 +1,8 @@
 .h{
     background-color: aqua;
+    color: blueviolet;
+    font-size: larger;
+    display: flex;
+    
+    align-content: center;
 }
